# test

./: .clang-format  BuildConfig.cpp.in  BuildConfig.h  CMakeLists.txt  HandleCrash.h  HandleCrash_Linux.cpp  HandleCrash_OSX.cpp  HandleCrash_Windows.cpp  MMCError.h  MultiMC.cpp  MultiMC.h  changelog.yaml  main.cpp
cmake/: FindSqlite3.cmake
depends/LogicalGui/: LogicalGui.h
depends/threadweaver/: CMakeLists.txt
depends/threadweaver/src/: collection.cpp  destructedstate_p.h  executewrapper_p.h  inconstructionstate_p.h  job.cpp  shuttingdownstate_p.h  suspendedstate_p.h  suspendingstate_p.h  weaver_p.h  weaverimplstate_p.h  workinghardstate_p.h
depends/threadweaver/threadweaver/: collection.h  dependencypolicy.h  exception.h  iddecorator.h  job.h  lambda.h  qobjectdecorator.h  queue.h  queueinterface.h  resourcerestrictionpolicy.h  sequence.h  thread.h  threadweaver_export.h
gui/: MainWindow.cpp  MainWindow.ui  QuickModGuiUtil.cpp  QuickModGuiUtil.h
gui/dialogs/: AccountSelectDialog.cpp  AccountSelectDialog.h  InstanceSettings.cpp  InstanceSettings.ui  NewInstanceDialog.cpp  OneSixModEditDialog.cpp  OneSixModEditDialog.h  SettingsDialog.cpp  SettingsDialog.ui  TasksDialog.cpp  TasksDialog.h  VersionSelectDialog.cpp  VersionSelectDialog.h
gui/pages/: BasePage.h  InstanceSettingsPage.h  InstanceSettingsPage.ui  PackagesPage.cpp  PackagesPage.h  PackagesPage.ui  QuickModBrowsePage.cpp  QuickModBrowsePage.h
gui/widgets/: PageContainer.cpp  PageContainer.h  ProgressWidget.cpp  ProgressWidget.h  TasksWidget.cpp  TasksWidget.h
logic/: BaseInstance.cpp  BaseInstance.h  BaseVersion.h  InstanceFactory.cpp  InstanceList.h  MMCJson.cpp  MMCJson.h  MinecraftProcess.cpp  ModList.cpp  OneSixInstance.cpp  OneSixInstance.h  OneSixInstance_p.h  OneSixUpdate.cpp  SQLiteDatabase.cpp  VersionFile.cpp  VersionFile.h  VersionFinal.cpp  VersionFinal.h
logic/auth/: MojangAccount.h
logic/db/: SQLiteDatabase.cpp  SQLiteDatabase.h  Schema.h
logic/forge/: ForgeVersion.cpp  ForgeVersion.h
tests/: CMakeLists.txt  tst_QuickMod.cpp  tst_QuickModSettings.cpp  tst_SQLiteDatabase.cpp
(+113 files in other folders)
